--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -67,7 +67,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=
+nxt.defaultPeers=52.90.32.253; 44.201.142.77;
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
